sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: reassignment to val
	  	if (plusPetit=false) {
                             ^